[tool.poetry]
name = "neos.py"
version = "0.1"
description = "Unofficial NeosVR API python library."
authors = ["brodokk <brodokk@brodokk.space>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/brodokk/neos.py"
repository = "https://github.com/brodokk/neos.py"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
python-dateutil = "2.8.2"
requests = "2.28.1"
dacite = "1.6.0"

[tool.poetry.dev-dependencies]
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"