[tool.poetry]
name = "neosvrpy"
version = "0.1"
description = "Unofficial NeosVR API python library."
authors = ["brodokk <brodokk@brodokk.space>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/brodokk/neosvrpy"
repository = "https://github.com/brodokk/neosvrpy"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
python-dateutil = "2.8.2"
requests = "2.28.1"
dacite = "1.6.0"
importlib-metadata = {version = ">=1.7.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"